2012-01-21  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-savedconfig): Add
	savedconfig_pkg_postinst() function
	(ebuild-mode-keywords-autotools): Add config_rpath_update() function

2011-12-31  Ulrich Mueller  <ulm@gentoo.org>

	* keyword-generation.sh: Set C locale for grep.	Reformat output.

2011-12-30  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el: All keywords are now from a
	auto-generated list apart from some special sections.  So many new
	functions, some go away.

2011-12-29  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-toolchain-funcs):
	Add functions tc-getBUILD_AR(), tc-getBUILD_AS(),
	tc-getBUILD_LD(), tc-getBUILD_STRIP(), tc-getBUILD_NM(),
	tc-getBUILD_RANLIB(), tc-getBUILD_OBJCOPY() and
	tc-getBUILD_PKG_CONFIG()
	(ebuild-mode-keywords-toolchain): Add gcc-multilib-configure()
	function.  Remove functions gcc-library-configure() and
	add_version to shared()
	(ebuild-mode-keywords-eutils): Add functions in_iuse(),
	use_if_iuse() and usex()
	(ebuild-mode-keywords-autotools): Add eaclocal_amflags() function
	(ebuild-mode-keywords-multilib): Remove functions
	get_libdir_override() and get_multilibdir()
	(ebuild-mode-keywords-java-vm-2): Add java-vm-2.eclass
	(ebuild-mode-keywords-libtool): Add elt_patch_dir() function
	(ebuild-mode-keywords-nsplugin): Add share_plugins_dir() function
	(ebuild-mode-keywords-kernel-2): Remove generate_sparc_asm() function
	(ebuild-mode-keywords-qt4-build): Rename
	skip_project_generation_patch() and skip_qmake_build_patch()
	(ebuild-mode-keywords-gnome2-utils): Add
	gnome2_environment_reset() function

2011-12-28  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-systemd): Add
	systemd_dotmpfilesd() and systemd_newunit() functions
	(ebuild-mode-keywords-check_reqs): Add check_reqs.eclass
	(ebuild-mode-keywords-office-ext): Add office_ext.eclass