@@ -3,6 +3,7 @@
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-savedconfig): Add
 	savedconfig_pkg_postinst() function
 	(ebuild-mode-keywords-autotools): Add config_rpath_update() function
+	(ebuild-mode-keywords-cdrom): Add cdrom.eclass
 
 2011-12-31  Ulrich Mueller  <ulm@gentoo.org>
 
